--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -1,3 +1,15 @@
-h1{
-    color: blue;
+/* Barra de navegacion */
+.navbar {
+    padding: 2rem;
+    background-color: aquamarine;
+}
+.navbar-collapse {
+    align-items:center ;
+    justify-content: space-between;
+}
+/* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
+@media screen and (max-width: 767px) {
+    .navbar-brand {
+        display: none;
+    }    
 }
