--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -1,15 +1,59 @@
 /* Barra de navegacion */
 .navbar {
     padding: 2rem;
-    background-color: aquamarine;
+    background-color: rgb(229, 188, 241);
 }
 .navbar-collapse {
     align-items:center ;
     justify-content: space-between;
 }
+
+/* Estilos generales*/
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-size: 2.5rem;
+    font-family: 'Croissant One', cursive;
+}
+
+/* Seccion Hero*/
+.hero {
+    background-color: aliceblue;
+    min-height: 450px;
+    text-align: center;
+}
+
+.hero-principal {
+    padding: 3rem;
+}
+
+.hero-imagen-desarrollador {
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+}
+
+.hero-principal h2 {
+    font-size: 1.5rem;
+    color: rgb(88, 86, 86);
+}
+
+
+
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
 @media screen and (max-width: 767px) {
     .navbar-brand {
         display: none;
     }    
+}
+
+@media screen and (min-width: 700px) {
+    .hero-inferior-imagen {
+        max-width: 600px;
+    }
 }
