--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -20,7 +20,20 @@ h1{
     font-size: 2.5rem;
     font-family: 'Croissant One', cursive;
 }
+.seccion-oscura{
+    color: white;
+    background-color: #1b1b32;
+}
 
+.seccion-titulo{
+    font-size: 2rem;
+    padding: 15px 0;
+    font-family: 'Croissant One', cursive;
+}
+
+.seccion-texto{
+    font-size: 1.2rem;
+}
 /* Seccion Hero*/
 .hero {
     background-color: aliceblue;
@@ -43,6 +56,15 @@ h1{
     color: rgb(88, 86, 86);
 }
 
+.sobre-mi {
+    height: 500px;
+    padding: 10px;
+}
+
+.sobre-mi .contenedor {
+    max-width: 600px;
+    text-align: center;
+}
 
 
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
