--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -25,6 +25,9 @@ h1{
     background-color: #1b1b32;
 }
 
+.seccion-clara{
+    background-color: white;
+}
 .seccion-titulo{
     font-size: 2rem;
     padding: 15px 0;
@@ -65,8 +68,20 @@ h1{
     max-width: 600px;
     text-align: center;
 }
-
-
+/*Experiencia*/
+.experiencia{
+    padding: 20px;
+}
+.experiencia .row div{
+    height: 250px;
+    background-color: blueviolet;
+    border: 2px solid black;
+}
+.experiencia-titulo{
+    font-size: 25px;
+    font-weight: bold;
+    margin:10px 0;
+}
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
 @media screen and (max-width: 767px) {
     .navbar-brand {
