--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -70,17 +70,42 @@ h1{
 }
 /*Experiencia*/
 .experiencia{
-    padding: 20px;
+    padding: 40px 40px 60px 40px;
 }
-.experiencia .row div{
-    height: 250px;
-    background-color: blueviolet;
-    border: 2px solid black;
+.experiencia .columna{
+    padding: 20px;
+    border: 2px solid #8080804d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    transition: all 0.2s ease-in;
+}
+
+.experiencia .columna:hover{
+    color: white;
+    background-color: black;
+}
+.experiencia i{
+    font-size: 2.5rem;
+    color: aqua;
+    background-color: black;
+    padding: 8px 19px;
+    border-radius: 50%;
+
 }
 .experiencia-titulo{
     font-size: 25px;
     font-weight: bold;
     margin:10px 0;
+}
+.badges-contenedor{
+    font-size: 25px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.badge{
+    margin: 5px;
 }
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
 @media screen and (max-width: 767px) {
