--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -33,9 +33,17 @@ h1{
     padding: 15px 0;
     font-family: 'Croissant One', cursive;
 }
+.seccion-descripcion{
+    font-size: 1.2rem;
+    color: 584e4e4;
+}
 
 .seccion-texto{
     font-size: 1.2rem;
+}
+.btn-info{
+    font-size: 1.1rem;
+    margin: 20px;
 }
 /* Seccion Hero*/
 .hero {
@@ -107,7 +115,66 @@ h1{
 .badge{
     margin: 5px;
 }
+/*Proyetos*/
+.proyectos-recientes{
+    padding: 40px;
+}
+.proyectos-recientes img{
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    display: block;
+    transition: all 0.2s ease;
+}
+.proyectos-contenedor{
+    padding-top: 60px;
+    margin-bottom: 40px;
+}
+
+.overlay{
+    transition: all 0.2s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.overlay p{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+.proyecto{
+    position: relative;
+}
+.proyecto:hover img{
+    opacity: 0.2;
+}
+.proyecto:hover .overlay{
+    opacity: 1;
+}
+
+.overlay .iconos-contenedor{
+    display: flex;
+}
+.overlay i{
+    color: black;
+    font-size: 60px;
+    margin: 10px;
+}
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
+@media screen and (max-width: 400px) {
+    .overlay p{
+        font-size: 18px;
+
+    }
+    .overlay i{
+        font-size: 40px;
+    }
+}
 @media screen and (max-width: 767px) {
     .navbar-brand {
         display: none;
