--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -165,6 +165,20 @@ h1{
     font-size: 60px;
     margin: 10px;
 }
+/*Articulos*/
+.articulos{
+    min-height: 500px;
+    padding: 30px;
+}
+.articulos .card{
+    width: 80%;
+    max-width: 600px;
+    margin: 20px;
+}
+.articulos .card-header
+{
+    font-weight: bold;
+}
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
 @media screen and (max-width: 400px) {
     .overlay p{
