--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -179,6 +179,49 @@ h1{
 {
     font-weight: bold;
 }
+/*Testimonions*/
+.testimonios{
+    padding: 40px 40px 80px 40px;
+}
+.testimonios .carousel{
+    max-width: 800px;
+}
+.carousel-item{
+    height: 500px;
+}
+.carousel-item .container{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-direction: column; 
+   align-items: center;
+   justify-content: center;
+}
+.testimonio-imagen{
+    height: 150px;
+    width: 150px;
+    margin: 10px 10px 20px 10px;
+}
+.testimonio-texto{
+    max-width: 70%;
+    font-size: 20px;
+    text-align: center;
+}
+.testimonio-info{
+    font-weight: bold;
+    text-align: center;
+}
+.testimonio-info  p{
+    margin-bottom: 0;
+}
+.testimonio-info .cliente{
+    font-size: 1.2rem;
+}
+.testimonio-info .cargo{
+    font-size: 0.9rem;
+    color: cadetblue;
+}
+
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
 @media screen and (max-width: 400px) {
     .overlay p{
@@ -198,5 +241,14 @@ h1{
 @media screen and (min-width: 700px) {
     .hero-inferior-imagen {
         max-width: 600px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .testimonio-imagen{
+        height: 120px;
+        width: 120px;
+    }
+    .testimonio-texto{
+        font-size: 18px;
     }
 }
