--- a/PortafolioWeb/style.css
+++ b/PortafolioWeb/style.css
@@ -261,7 +261,44 @@ h1{
     font-size: 1.3rem;
     transition: all 0.2s ease-in-out;
 }
-
+/*Footer*/
+footer{
+    min-height: 500px;
+}
+.footer-logo{
+    height: 80px;
+    width: 80px;
+    margin: 10px;
+}
+.footer-texto{
+    font-size: 1.5rem;
+    padding: 20px;
+    margin-bottom: 30px;
+    font-family: 'Courier New', Courier, monospace;
+}
+.iconos-redes-sociales a{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    margin: 10px;
+    border-radius: 50%;
+    transition: all 0.2s ease-in;
+}
+.iconos-redes-sociales i{
+    color: white;
+    font-size: 1.5rem;
+    transition: all 0.2s ease-in;
+}
+.iconos-redes-sociales a:hover{
+    background-color: white;
+    border: 2px solid rgb(13, 110, 253)
+}
+.iconos-redes-sociales a:hover i{
+    color: black;
+}
 /* media query: dice que se debe aplicar solo a cierto tamaño de dispostivo*/
 @media screen and (max-width: 400px) {
     .overlay p{
